Slides are now working

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@
 			margin: 0px; padding: 0px;
 			height: 30px;
 			color: white;
-			background: #333333 url(footer-slice.jpg) repeat-x;
+			background: #333333 url(../images/footer-slice.jpg) repeat-x;
 			border-top: 2px solid #222222;
 			position: fixed;
 			width: 100%;
