--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@
 			margin: 0px; padding: 0px;
 			background: #BBBBBB;
 			float: left;
-			width: 500px;
+		/*	width: 500px;*/
 		}
 		#sidebar {
 			margin: 0px; padding: 0px;
@@ -80,6 +80,8 @@
 			width: 200px;
 			color: #FFFFFF;
 			border-left: 1px solid black;
+			position: absolute;
+			right:0px
 		}
 		#footer {
 			margin: 0px; padding: 0px;
