--- a/css2/skin_sidebar.css
+++ b/css2/skin_sidebar.css
@@ -61,13 +61,18 @@
 )}
 .jcarousel-skin-tango .jcarousel-item-vertical:hover {
     /*margin-bottom: 15px;*/
-    /*border: 5px solid black;*/
+    -moz-box-sizing:border-box;
+    border: 3px solid #090909;
     opacity: 1;
     -moz-opacity: 1;
     filter:alpha(opacity=10);
 
-}
 
+}
+.jcarousel-skin-tango .jcarousel-item-vertical img{
+    width: 100%;
+    height: 100%;
+)}
 
 .jcarousel-skin-tango .jcarousel-item-placeholder {
     background: #fff;
