Some progress with p1.html

--- a/css/frame.css
+++ b/css/frame.css
@@ -76,7 +76,7 @@ ul#header-nav li#blog a:hover {
 	color: #FFF;
 }
 #content {
-	background:#BBB;
+	background:#DDD;
 	margin-right:200px;
 	height:100%;
 	overflow:auto;
